--- a/Parser.ipynb
+++ b/Parser.ipynb
@@ -2,150 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 tables found.\n",
-      "  67 lines found.\n",
-      "<tr>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   Airport name\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   <a href=\"/wiki/International_Civil_Aviation_Organization_airport_code\" title=\"International Civil Aviation Organization airport code\">\n",
-      "    ICAO\n",
-      "   </a>\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   <a href=\"/wiki/Transport_Canada\" title=\"Transport Canada\">\n",
-      "    TC\n",
-      "   </a>\n",
-      "   <a href=\"/wiki/Location_identifier\" title=\"Location identifier\">\n",
-      "    LID\n",
-      "   </a>\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   <a href=\"/wiki/International_Air_Transport_Association_airport_code\" title=\"International Air Transport Association airport code\">\n",
-      "    IATA\n",
-      "   </a>\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   Community\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   Province/\n",
-      "   <br/>\n",
-      "   Territory\n",
-      "  </b>\n",
-      " </th>\n",
-      "</tr>\n",
-      "\n",
-      "  140 lines found.\n",
-      "<tr>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   Airport name\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   <a href=\"/wiki/International_Civil_Aviation_Organization_airport_code\" title=\"International Civil Aviation Organization airport code\">\n",
-      "    ICAO\n",
-      "   </a>\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   <a href=\"/wiki/Transport_Canada\" title=\"Transport Canada\">\n",
-      "    TC\n",
-      "   </a>\n",
-      "   <a href=\"/wiki/Location_identifier\" title=\"Location identifier\">\n",
-      "    LID\n",
-      "   </a>\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   <a href=\"/wiki/International_Air_Transport_Association_airport_code\" title=\"International Air Transport Association airport code\">\n",
-      "    IATA\n",
-      "   </a>\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   Community\n",
-      "  </b>\n",
-      " </th>\n",
-      " <th width=\"*\">\n",
-      "  <b>\n",
-      "   Province/\n",
-      "   <br/>\n",
-      "   Territory\n",
-      "  </b>\n",
-      " </th>\n",
-      "</tr>\n",
-      "\n"
+     "ename": "OperationalError",
+     "evalue": "near \")\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6766fb0ea221>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mconn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlite_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'create table AIRPORT ()'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrange_alpha\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: near \")\": syntax error"
      ]
     }
    ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import urllib.request as req\n",
+    "import sqlite3\n",
     "\n",
-    "url = 'https://en.wikipedia.org/wiki/List_of_airports_in_Canada_(A%E2%80%93B)'\n",
-    "str_wikitable = 'wikitable'\n",
+    "list_url_prefix = 'https://en.wikipedia.org/wiki/List_of_airports_by_IATA_code:_'\n",
+    "sqlite_file = 'airline_db.sqlite3'\n",
     "\n",
-    "try:\n",
-    "    resp = req.urlopen(url)\n",
-    "    soup = BeautifulSoup(resp.read(), 'html.parser')\n",
+    "# Initialise SQLite tables\n",
+    "conn = sqlite3.connect(sqlite_file)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "def range_alpha(start, end):\n",
+    "    for i in range(ord(start), ord(end) + 1):\n",
+    "        yield chr(i)\n",
+    "        \n",
+    "for c in range_alpha('A', 'Z'):\n",
+    "    url = list_url_prefix + c\n",
+    "    with req.urlopen(url) as resp:\n",
+    "        soup = BeautifulSoup(resp.read(), \"lxml\")\n",
+    "        tables = soup.find_all(\"table\", class_='wikitable')\n",
+    "        print('{} potential target table(s) found.'.format(len(tables)))\n",
+    "        for table in tables:\n",
+    "            rows = table.find_all('tr')\n",
+    "            for row in rows:\n",
+    "                cells = row.find_all('td')\n",
+    "                if len(cells) == 0:\n",
+    "                    continue\n",
     "    \n",
-    "    # Attempt to get list table\n",
-    "    tables = soup.find_all('table')\n",
-    "    print('{} tables found.'.format(len(tables)))\n",
-    "    for tbl in tables:\n",
-    "        if str_wikitable in tbl['class']:\n",
-    "            # That's probably data table\n",
-    "            trs = tbl.find_all('tr')\n",
-    "            print('  {} lines found.'.format(len(trs)))\n",
-    "            for line in trs:\n",
-    "                print(line.prettify())\n",
-    "                break\n",
-    "except URLError as e:\n",
-    "    print('URL returns error. Code={}'.format(e.code))"
+    "    # Only process first table for debug\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def range_char(start, end):\n",
+    "    yield chr(range(int(start)))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -157,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
