--- a/Parser.ipynb
+++ b/Parser.ipynb
@@ -26,6 +26,7 @@
     "import urllib.request as req\n",
     "import sqlite3\n",
     "\n",
+    "str_wikitable = 'wikitable'\n",
     "list_url_prefix = 'https://en.wikipedia.org/wiki/List_of_airports_by_IATA_code:_'\n",
     "sqlite_file = 'airline_db.sqlite3'\n",
     "\n",
@@ -44,11 +45,13 @@
     "        tables = soup.find_all(\"table\", class_='wikitable')\n",
     "        print('{} potential target table(s) found.'.format(len(tables)))\n",
     "        for table in tables:\n",
-    "            rows = table.find_all('tr')\n",
-    "            for row in rows:\n",
-    "                cells = row.find_all('td')\n",
-    "                if len(cells) == 0:\n",
-    "                    continue\n",
+    "            if str_wikitable in table['class']:\n",
+    "                # Potential target table\n",
+    "                rows = table.find_all('tr')\n",
+    "                for row in rows:\n",
+    "                    cells = row.find_all('td')\n",
+    "                    if len(cells) == 0:\n",
+    "                        continue\n",
     "    \n",
     "    # Only process first table for debug\n",
     "    break"
