--- a/Parser.ipynb
+++ b/Parser.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import urllib.request as req\n",
+    "import sqlite3\n",
+    "\n",
+    "# Miscellaneous methods\n",
+    "def range_alpha(start, end):\n",
+    "    for i in range(ord(start), ord(end) + 1):\n",
+    "        yield chr(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
@@ -22,9 +40,6 @@
     }
    ],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import urllib.request as req\n",
-    "import sqlite3\n",
     "\n",
     "str_wikitable = 'wikitable'\n",
     "list_url_prefix = 'https://en.wikipedia.org/wiki/List_of_airports_by_IATA_code:_'\n",
@@ -33,11 +48,30 @@
     "# Initialise SQLite tables\n",
     "conn = sqlite3.connect(sqlite_file)\n",
     "cursor = conn.cursor()\n",
+    "cursor.execute('''create table country if not exists (\n",
+    "  country_id int primary key,\n",
+    "  name text not null\n",
+    ");''')\n",
+    "cursor.execute('''create table province if not exists (\n",
+    "  privince_id int primary key,\n",
+    "  name text not null,\n",
+    "  country_id int not null\n",
+    ");''')\n",
+    "cursor.execute('''create table city if not exists (\n",
+    "  city_id int primary key,\n",
+    "  name text not null,\n",
+    "  country_id int not null,\n",
+    "  privince_id int\n",
+    ");''')\n",
+    "cursor.execute('''create table airport if not exists (\n",
+    "  id int primary key,\n",
+    "  iata text not null,\n",
+    "  icao text not null,\n",
+    "  name text not null,\n",
+    "  city_id int\n",
+    ");''')\n",
     "\n",
-    "def range_alpha(start, end):\n",
-    "    for i in range(ord(start), ord(end) + 1):\n",
-    "        yield chr(i)\n",
-    "        \n",
+    "       \n",
     "for c in range_alpha('A', 'Z'):\n",
     "    url = list_url_prefix + c\n",
     "    with req.urlopen(url) as resp:\n",
@@ -48,10 +82,16 @@
     "            if str_wikitable in table['class']:\n",
     "                # Potential target table\n",
     "                rows = table.find_all('tr')\n",
-    "                for row in rows:\n",
+    "                for idx, row in enumerate(rows):\n",
     "                    cells = row.find_all('td')\n",
     "                    if len(cells) == 0:\n",
     "                        continue\n",
+    "                    # Breakdown columns into specific items\n",
+    "                    print('{} cells found.'.format(len(cells)))\n",
+    "                    iata_code = cells[0].string\n",
+    "                    icao_code = cells[1].string\n",
+    "                    name = cells[2].a.string\n",
+    "                    \n",
     "    \n",
     "    # Only process first table for debug\n",
     "    break"
@@ -74,9 +114,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -88,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
